Align corrections

--- a/_sass/layout/default.scss
+++ b/_sass/layout/default.scss
@@ -6,7 +6,7 @@
     display: flex;
     min-height: 100vh;
 
-    .page { flex: 1 0 auto }
+    .page { flex: 1 0 0% }
     .content { @extend .pd-20 }
   }
 /* /DEFAULT*/
