--- a/assets/clefs/grid/aligns.scss
+++ b/assets/clefs/grid/aligns.scss
@@ -66,22 +66,22 @@
     //---------------- VERTICAL GROUP
     //with .-score
     &.-score {
-      &.-all_top {
+      &.-top {
         align-content: flex-start;
       }
-      &.-all_middle {
+      &.-middle {
         align-content: center;
       }
-      &.-all_between {
+      &.-between {
         align-content: space-between;
       }
-      &.-all_around {
+      &.-around {
         align-content: space-around;
       }
-      &.-all_stretch {
+      &.-stretch {
         align-content: stretch;
       }
-      &.-all_bottom {
+      &.-bottom {
         align-content: flex-end;
       }
     }
@@ -90,33 +90,33 @@
     //---------------- SELF ALIGN
     //without .-claviers
     &:not(.-claviers) {
-      > .-in_top {
+      > .-intop {
         align-self: flex-start;
       }
-      > .-in_middle {
+      > .-inmiddle {
         align-self: center;
       }
-      > .-in_bottom {
+      > .-inbottom {
         align-self: flex-end;
       }
-      > .-in_stretch {
+      > .-instretch {
         align-self: stretch;
       }
-      > .-in_baseline {
+      > .-inbaseline {
         align-self: baseline;
       }
     }
 
     //with .-claviers
     &.-claviers {
-      > .-in_top {
+      > .-intop {
         margin-bottom: auto;
       }
-      > .-in_middle {
+      > .-inmiddle {
         margin-bottom: auto;
         margin-top: auto;
       }
-      > .-in_bottom {
+      > .-inbottom {
         margin-top: auto;
       }
     }
